2006-04-01  Christian Persch  <chpe@cvs.gnome.org>

        * embed/mozilla/EphyPromptService.cpp:

	Fix crash when cancelling the prompt before the timeout has run.

2006-03-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:

	Don't throw when cancelling the dialogue with ESC. Fixes bug #333780.

2006-03-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:

	Make these implement threadsafe isupports.

2006-03-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	Don't activate typeaheadfind on XUL documents.

2006-02-22  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-gecko-1-8.js:

	Unset general.useragent.extra.simple pref from xulrunner,
	we don't want that in our UA string.

2006-02-20  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-gecko-1.8.js:

	Enable error pages explicitly since xulrunner is missing
	that pref too.

2006-02-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-02-12  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.8.5 ===

	* doc/reference/tmpl/ephy-embed.sgml:
	* help/fi/fi.po:
	* lib/ephy-file-helpers.c:
	* lib/ephy-gui.c: (ephy_gui_menu_position_on_toolbar):

2006-02-10  Christian Persch  <chpe@cvs.gnome.org>

	* NEWS:
	* configure.ac:
	* data/Makefile.am:
	A data/chrome/.cvsignore:
	A data/chrome/Makefile.am:
	A data/chrome/about.xhtml:
	A data/chrome/brand.dtd.in:
	A data/chrome/brand.properties.in:
	A data/chrome/epiphany.manifest.in:
	A embed/mozilla/EphyDirectoryProvider.cpp:
	A embed/mozilla/EphyDirectoryProvider.h:
	A embed/mozilla/EphyPromptService.cpp:
	A embed/mozilla/EphyPromptService.h:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/MozRegisterComponents.cpp:
	* embed/mozilla/mozilla-embed-single.cpp:
	* po/POTFILES.skip:
