@@ -1,3 +1,12 @@
+=== THIS BRANCH IS DEAD! ===
+
+2006-07-14  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/bookmarks/ephy-favorites-menu.c:
+	(ephy_favorites_menu_finalize):
+
+	Fix a potential crash.
+
 2006-04-01  Christian Persch  <chpe@cvs.gnome.org>
 
         * embed/mozilla/EphyPromptService.cpp:
